Adding missing bits from droid-hal-cosmo-pda that might be useful

--- a/debian/rules
+++ b/debian/rules
@@ -2,3 +2,9 @@
 
 %:
 	dh $@ --with systemd
+
+override_dh_installsystemd:
+	dh_installsystemd --no-stop-on-upgrade --no-restart-after-upgrade --no-start
+
+override_dh_systemd_start:
+	dh_systemd_start --no-start
