--- a/var/lib/lxc/android/config
+++ b/var/lib/lxc/android/config
@@ -70,12 +70,12 @@ lxc.hook.mount = /usr/share/lxcfs/lxc.mount.hook
 lxc.hook.post-stop = /usr/share/lxcfs/lxc.reboot.hook
 
 
-#lxc.mount.entry = tmpfs dev tmpfs nosuid 0 0
-#lxc.mount.entry = /dev/__properties__ dev/__properties__ bind bind,create=dir 0 0
-#lxc.mount.entry = /dev/socket dev/socket bind bind,create=dir 0 0
-#lxc.mount.entry = proc proc proc nodev,noexec,nosuid 0 0
-#lxc.mount.entry = sys sys sysfs nodev,noexec,nosuid 0 0
-##lxc.mount.entry = tmp tmp tmpfs nodev,noexec,nosuid 0 0
+lxc.mount.entry = tmpfs dev tmpfs nosuid 0 0
+lxc.mount.entry = /dev/__properties__ dev/__properties__ bind bind,create=dir 0 0
+lxc.mount.entry = /dev/socket dev/socket bind bind,create=dir 0 0
+lxc.mount.entry = proc proc proc nodev,noexec,nosuid 0 0
+lxc.mount.entry = sys sys sysfs nodev,noexec,nosuid 0 0
+#lxc.mount.entry = tmp tmp tmpfs nodev,noexec,nosuid 0 0
 #lxc.mount.entry = /android/data data bind bind 0 0
-#lxc.mount.entry = /vendor vendor bind rbind 0 0
-#lxc.mount.entry = /mnt mnt bind rbind 0 0
+lxc.mount.entry = /vendor vendor bind rbind 0 0
+lxc.mount.entry = /mnt mnt bind rbind 0 0
