--- a/var/lib/lxc/android/config
+++ b/var/lib/lxc/android/config
@@ -10,7 +10,8 @@ lxc.pty.max = 1024
 lxc.arch = arm64
 
 # Drop some harmful capabilities
-lxc.cap.drop = mac_admin mac_override sys_time sys_module sys_rawio
+#lxc.cap.drop = mac_admin mac_override sys_time sys_module sys_rawio
+lxc.cap.drop = mac_admin mac_override
 
 # Blacklist some syscalls which are not safe in privileged containers
 lxc.seccomp.profile = /usr/share/lxc/config/common.seccomp
@@ -34,6 +35,6 @@ lxc.mount.entry = /dev/socket dev/socket bind bind,create=dir 0 0
 lxc.mount.entry = proc proc proc nodev,noexec,nosuid 0 0
 lxc.mount.entry = sys sys sysfs nodev,noexec,nosuid 0 0
 #lxc.mount.entry = tmp tmp tmpfs nodev,noexec,nosuid 0 0
-#lxc.mount.entry = /android/data data bind bind 0 0
+lxc.mount.entry = /data data bind bind 0 0
 lxc.mount.entry = /vendor vendor bind rbind 0 0
 lxc.mount.entry = /mnt mnt bind rbind 0 0
