Adding dependency upon cosmo-linux-kernel that was present in droid-hal-cosmopda-bin that this component is replacing

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: https://github.com/gemian/lxc-android
 
 Package: lxc-android
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, lxc, gemian-system
+Depends: lxc, gemian-system, cosmo-linux-kernel
 Description: lxc configuration for starting android
  .
  This package provides the configuration for starting android in lxc
