--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: lxc-android
 Priority: optional
-Maintainer: TheKit <nekit1000@gmail.com>
+Maintainer: Adam Boardman <adamboardman@gmail.com>
 Build-Depends: debhelper (>= 12)
 Standards-Version: 4.5.0
 Section: libs
@@ -8,7 +8,7 @@ Homepage: https://github.com/gemian/lxc-android
 
 Package: lxc-android
 Architecture: all
-Depends: lxc, gemian-system, cosmo-linux-kernel
+Depends: lxc, gemian-system, planet-linux-kernel
 Description: lxc configuration for starting android
  .
  This package provides the configuration for starting android in lxc
