Pulled lots of changes from Droidian

--- a/debian/lxc-android.service
+++ b/debian/lxc-android.service
@@ -1,12 +1,22 @@
 [Unit]
 Description=LXC Android Config and Container Initialization
-After=android-rootfs.mount
+After=android-mount.service
+Wants=android-mount.service
 
 [Service]
-Type=forking
-ExecStart=/usr/bin/lxc-start -n android -d -- /init
-ExecStartPost=/usr/lib/lxc-android/lxc-android-ready
-ExecStop=/usr/bin/lxc-stop -n android -k
+Type=notify
+NotifyAccess=exec
+# Move the actual container start-up as an ExecStartPre.
+# While is not-entirely-correct(TM) this allows for the notification
+# script to block.
+# The container is now started in background, and lxc-android-notify
+# has the task to notify systemd when it's ready.
+ExecStartPre=/usr/bin/lxc-start -n android -d
+ExecStart=/usr/lib/lxc-android/lxc-android-notify
+KillMode=mixed
+TimeoutStopSec=120s
+ExecStop=/usr/lib/lxc-android/lxc-android-stop
+Delegate=yes
 
 [Install]
 WantedBy=multi-user.target
