--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,11 @@ Homepage: https://github.com/gemian/lxc-android
 
 Package: lxc-android
 Architecture: all
-Depends: lxc, gemian-system, planet-linux-kernel
+Depends: lxc,
+         gemian-system,
+         planet-linux-kernel,
+         parse-android-dynparts,
+         halium-wrappers,
 Description: lxc configuration for starting android
  .
  This package provides the configuration for starting android in lxc
