--- a/var/lib/lxc/android/config
+++ b/var/lib/lxc/android/config
@@ -3,7 +3,7 @@ lxc.net.0.type = none
 
 lxc.rootfs.path = dir:/var/lib/lxc/android/rootfs
 
-lxc.tty.dir = 
+lxc.tty.dir = lxc
 lxc.tty.max = 4
 lxc.pty.max = 1024
 lxc.arch = arm64
@@ -17,8 +17,7 @@ lxc.cap.drop = mac_admin mac_override
 
 lxc.hook.pre-start = /var/lib/lxc/android/pre-start.sh
 
-# This is not needed as we do it manually within the systemd startup
-#lxc.init_cmd = /init
+lxc.init.cmd = /init
 
 lxc.apparmor.profile = unconfined
 lxc.autodev = 0
@@ -28,10 +27,13 @@ lxc.hook.post-stop = /usr/share/lxcfs/lxc.reboot.hook
 
 lxc.mount.entry = tmpfs dev tmpfs nosuid 0 0
 lxc.mount.entry = /dev/__properties__ dev/__properties__ bind bind,create=dir 0 0
+lxc.mount.entry = /dev/binderfs dev/binderfs bind bind,create=dir,optional 0 0
 lxc.mount.entry = /dev/socket dev/socket bind bind,create=dir 0 0
 lxc.mount.entry = proc proc proc nodev,noexec,nosuid 0 0
 lxc.mount.entry = sys sys sysfs nodev,noexec,nosuid 0 0
 #lxc.mount.entry = tmp tmp tmpfs nodev,noexec,nosuid 0 0
 lxc.mount.entry = /data data bind bind 0 0
-lxc.mount.entry = /vendor vendor bind rbind 0 0
+#lxc.mount.entry = /vendor vendor bind rbind 0 0
 lxc.mount.entry = /mnt mnt bind rbind 0 0
+lxc.mount.entry = /apex apex bind bind,optional 0 0
+lxc.mount.entry = /odm odm bind bind,optional 0 0
